tests/en/errors/layout_badvalue.salam
// EXPECT: E018
layout:
    box:
        form: input: type="banana" end end
    end
end
